# gtkqq

./: .gitignore  AUTHORS  Doxyfile  INSTALL  Makefile.am  Makefile.in  PACKAGES  README  TODO  aclocal.m4  autoclean.sh  autogen.sh  cleanup  config.h.in  configure  configure.ac  configure.opfetion  general  gtkqq.spec.in  todo
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.0t  traces.1  traces.2  traces.3  traces.4  traces.5
doc/: msgformat  recvmsgfmt  sendmsg  serverreturns  table.sql  webqq  webqq登录过程分析  webqq解析  wqq
doc/js/: appbar.js  loginproxy.js  panel.js  ping.js  proxy.html  qq.js  qqform.html  qqweb.all.js  qqweb.js  test.html  userdetails.js
doc/pkgs/: changestatus  login  loginvc  logout  verifycodeimg  webqqgetgroupinfo  webqqlogin  webqqlogin_only
pixmaps/: Makefile.am  gtkqq.desktop
src/: Makefile.am  Makefile.in  qq.h
src/cli/: Makefile.in
src/comm/: Makefile.am  Makefile.in  cprint.c  cprint.h  log.c  log.h
src/gui/: 2  Makefile.am  Makefile.in  Proxy.glade  buddylist.c  buddylist.h  buddytree.c  buddytree.h  chattextview.c  chattextview.h  chatwidget.c  chatwidget.h  chatwindow.c  chatwindow.h  config.c  config.h  consts.h  constval.h  dao.c  dao.h  facepopupwindow.c  facepopupwindow.h  gqqconfig.c  gqqconfig.h  groupchatwindow.c  groupchatwindow.h  loginpanel.c  loginpanel.h  main.c  mainpanel.c  mainpanel.h  mainwindow.c  mainwindow.h  msgdispacher.c  msgdispacher.h  msgloop.c  msgloop.h  notify.c  notify.h  proxypanel.c  (+14 more)
src/gui/tencent/: Makefile.am  Makefile.in  constval.h  qq.c  qqbutton.c  qqbutton.h  qqwindow.c  qqwindow.h
src/gui/test/: Makefile.am  Makefile.in  test-splashpanel.c  winmove.c
src/libqq/: Makefile  Makefile.am  Makefile.in  event.h  http.c  http.h  json.c  json.h  json_parser.c  json_parser.h  qq-login.c  qq.h  qqhosts.h  qqimg.c  qqinit.c  qqlogin.c  qqmanageinfo.c  qqpoll.c  qqproxy.c  qqproxy.h  qqsendmsg.c  qqtypes.c  qqtypes.h  qqutils.c  request.h  test.json  testhttp.c  testjson  testjson.c  unicode.c  unicode.h  url.c  url.h
src/misc/: Makefile.am  Makefile.in
src/misc/LoginPanel/keep/: Button_close_pushedBackground.bmp.keep  Button_colse_normal.bmp.keep  Button_max_normalBackground.bmp.keep  Button_min_normalBackground.bmp.keep  Button_min_pushedBackground.bmp.keep  Button_restore_normal.bmp.keep  LoginPanel_LoginButton_background_foreground.bmp.keep  LoginPanel_LoginButton_pushedAction_sb1_background_T0.bmp.keep  MainPanel_MainFrameTitle_file.png.keep
src/misc/qqfaces/: Makefile.am  Makefile.in
src/misc/sound/: Makefile.am
src/misc/status/: Makefile.am  Makefile.in
src/test/: Makefile.am  Makefile.in  test.json  testcprint.c  testhttp.c  testjson.c  testlog.c  testpro.c  testproxy.c  testqqwin  testqqwin.c  testurl.c
src/tool/: Makefile  Makefile.am  Makefile.in  test  unidecode  unidecode.c  webqq.js
