imgdir= ${pkgdatadir}/misc
img_DATA=All_window_sizeGripFile.bmp\
	Button_close_highlightBackground.bmp\
	Button_close_pushedBackground.bmp\
	Button_colse_normal.bmp\
	Button_max_highlightBackground.bmp\
	Button_max_normalBackground.bmp\
	Button_max_pushedBackground.bmp\
	Button_min_highlightBackground.bmp\
	Button_min_normalBackground.bmp\
	Button_min_pushedBackground.bmp\
	Button_restore_highlightBackground.bmp\
	Button_restore_normal.bmp\
	Button_restore_pushedBackground.bmp\
	Logining.gif\
	LoginPanel_LoginButton_background_background.bmp\
	LoginPanel_LoginButton_background_foreground.bmp\
	LoginPanel_LoginButton_pushedAction_sb1_background_T0.bmp\
	LoginPanel_window_windowBkg.bmp\
	MainPanel_Support_DownBackground.bmp\
	MainPanel_Support_highlightBackground.bmp\
	MainPanel_Support_NormalBackground.bmp\
	webqq_icon.png
EXTRA_DIST = $(imgdir)
