SUBDIRS=qqfaces status

imgdir= ${pkgdatadir}/misc
img_DATA=All_window_sizeGripFile.bmp\
	Button_close_highlightBackground.bmp\
	Button_close_pushedBackground.bmp\
	Button_colse_normal.bmp\
	Button_max_highlightBackground.bmp\
	Button_max_normalBackground.bmp\
	Button_max_pushedBackground.bmp\
	Button_min_highlightBackground.bmp\
	Button_min_normalBackground.bmp\
	Button_min_pushedBackground.bmp\
	Button_restore_highlightBackground.bmp\
	Button_restore_normal.bmp\
	Button_restore_pushedBackground.bmp\
	MainPanel_Support_DownBackground.bmp\
	MainPanel_Support_highlightBackground.bmp\
	MainPanel_Support_NormalBackground.bmp\
	webqq_icon.png\
	avatar.gif
EXTRA_DIST = $(imgdir)
