classicsounddir=${pkgdatadir}/misc/sound/Classic
officesounddir=${pkgdatadir}/misc/sound/Office

classicsound_DATA=\
	Classic/Audio.wav\
	Classic/Global.wav\
	Classic/msg.wav\
	Classic/shake.wav\
	Classic/system.wav

officesound_DATA=\
	Office/Audio.wav\
	Office/Global.wav\
	Office/msg.wav\
	Office/shake.wav\
	Office/system.wav

EXTRA_DIST= $(classicsound_DATA) $(officesound_DATA)
